# softnoise

./: Makefile  README.md
docs/: architecture-linux.md  architecture-macos.md
linux/: meson.build
linux/data/: com.softnoise.app.desktop  com.softnoise.app.metainfo.xml
linux/flatpak/: com.softnoise.app.yml
linux/packaging/appimage/: AppImageBuilder.yml
linux/packaging/debian/: changelog  control  copyright  rules
linux/softnoise/: __main__.py  audio_engine.py  window.py
macos/SoftNoise/: AudioEngine.swift  ContentView.swift  Info.plist  SoftNoiseApp.swift
macos/SoftNoise.xcodeproj/: project.pbxproj
